--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -342,6 +342,7 @@
     </svg>
 
     <span>{{ title }} app is running!</span>
+    <div>Commit Success!</div>
 
     <svg id="rocket-smoke" xmlns="http://www.w3.org/2000/svg" width="516.119" height="1083.632" viewBox="0 0 516.119 1083.632">
       <title>Rocket Ship Smoke</title>
